--- a/src/components/Statistic/Statistic.module.css
+++ b/src/components/Statistic/Statistic.module.css
@@ -36,6 +36,7 @@
   padding-left: 50px;
   padding-right: 50px;
   margin-top: 50px;
+  display: flex;
 }
 
 .sectionTimer {
@@ -45,6 +46,7 @@
   margin-bottom: 25px;
   padding: 2px;
   list-style: none;
+  font-size: 20px;
 }
 
 .sectionGoal {
