--- a/src/components/Statistic/timers/Timer.module.css
+++ b/src/components/Statistic/timers/Timer.module.css
@@ -1,10 +1,9 @@
 .timer {
   margin: 0 auto;
-  padding: 20px;
+  padding: 5px;
   display: flex;
   justify-content: center;
   width: 320px;
-  /* height: 65px; */
   background: white;
   border: 1px solid #643a3a;
   vertical-align: middle;
@@ -13,12 +12,13 @@
 .field {
   display: flex;
   flex-direction: column;
-  width: 90px;
-  line-height: 65px;
+  text-align: center;
+  width: 60px;
 }
 .value {
-  min-width: 30px;
+  min-width: 40px;
   font-size: 30px;
+  padding: 0 5px;
 }
 .label {
   min-width: 20px;
